@@ -1,5 +1,14 @@
 2000-02-02  Matti Aarnio  <mea@mea.tmt.tele.fi>
 
+	* libsh/io.c, router/functions.c, router/prototypes.h,
+	  router/rtsyslog.c, smtpserver/smtprouter.c,
+	  transports/libta/diagnostic.c:
+	    Cleaned up several GCC 2.96 reported/complained things.
+	    (Couple of which stopped compilation..)
+
+	* transports/smtp/smtp.c:
+	    More of hunting of strange errors at protocol transmission.
+
 	* smtpserver/smtpserver.c:
 	    When reporting '-- pipeline input exists', do that immediately
 	    after collecting previous input line, not after SYNCing out
